@@ -3,6 +3,7 @@
  - **Result/row iterators have changed.**  Instead of `i[n]` do `(*i)[n]`.
  - **Result equality now only compares identity, not the data inside.**
  - **Row/field equality now only compares identity, not the data inside.**
+ - `pqxx::bytes` is now a vector of bytes, not a string of bytes. (#924)
  - The string conversion API has changed! (Old API should still work). (#948)
  - "String conversion" to `std::string_view` is now supported. (#694)
  - Simpler to use: `pqxx::from_string()`, `pqxx::to_buf()`, `pqxx::into_bu()`.
